feat: no docs = fun

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,27 +1,27 @@
 ---
-title: Welcome to Starlight
+title: Welcome to Olingo
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
   tagline: Congrats on setting up a new Starlight project!
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/olingo.webp
   actions:
-    - text: Example Guide
+    - text: Installation guide
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Read the Olingo docs
+      link: /reference/example/
       icon: external
       variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Read more
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+<CardGrid>
+	<Card title="Diagrams" icon="seti:illustrator">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
 	<Card title="Add new content" icon="add-document">
