refactor: update view naming

--- a/src/content/docs/architecture/index.mdx
+++ b/src/content/docs/architecture/index.mdx
@@ -5,4 +5,4 @@ tableOfContents: false
 
 import ReactLikeC4View from '../../../components/LikeC4ViewReact';
 
-<ReactLikeC4View viewId="main" client:only="react" />
+<ReactLikeC4View viewId="index" client:only="react" />
